--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,25 @@
 
 .grid{
   display: grid;
-  grid-gap: 50px;
+  grid-gap: 30px;
   grid-template-columns: auto auto auto auto;
+}
+
+.pieceGrid{
+  border: 5px solid lightblue;
+  border-radius: 25px;
+  padding: 20px;
+}
+
+.grid>div{
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  text-align: center;
+  background-color: whitesmoke;
+  color: black;
+}
+
+.activePiece:hover {
+  background-color: lightblue;
 }
