--- a/src/App.css
+++ b/src/App.css
@@ -58,6 +58,13 @@
   align-items: center;
 }
 
+.app-grid--with-opponent{
+  display:grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 0px 15px;
+  align-items: center;
+}
+
 .grid{
   display: grid;
   grid-gap: 30px;
