--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,7 @@
 .reset-button{
-  width: 80px;
+  width: 50px;
   height: 50px;
-  font-size: 24px;
-  position: relative;
-  top:5%;
+  font-size: 15px;
   text-align: center;
   border: none;
   background-color: #007CC7;
@@ -14,14 +12,14 @@
 
 .app-grid{
   display:grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto auto auto;
   grid-gap: 0px 15px;
   align-items: center;
 }
 
 .app-grid--with-opponent{
   display:grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: auto auto auto auto auto;
   grid-gap: 0px 15px;
   align-items: center;
 }
@@ -34,7 +32,6 @@
 }
 
 .piece-grid{
-  margin-top:10px;
   border: 5px solid #007CC7;
   border-radius: 25px;
   padding: 20px;
