--- a/src/App.css
+++ b/src/App.css
@@ -12,22 +12,22 @@
 
 .app-grid{
   display:grid;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: auto;
   grid-gap: 0px 15px;
   align-items: center;
 }
 
 .app-grid--with-opponent{
   display:grid;
-  grid-template-columns: auto auto auto auto auto;
+  grid-template-columns: auto auto;
   grid-gap: 0px 15px;
   align-items: center;
 }
 
-.grid{
+.grid, .piece-grid{
   display: grid;
   grid-gap: 30px;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: auto auto auto auto auto;
   padding: 0px 25px;
 }
 
@@ -37,7 +37,7 @@
   padding: 20px;
 }
 
-.grid>div{
+.grid>.gridItem, .piece-grid>div{
   width: 50px;
   height: 50px;
   line-height: 50px;
@@ -46,6 +46,13 @@
   color: black;
   /*Makes it so the border is placed on the inside*/
   box-sizing: border-box;
+}
+
+.grid>.resultItem{
+  width:50px;
+  height:50px;
+  line-height: 50px;
+  text-align: center;
 }
 
 .active-piece:hover {
@@ -59,13 +66,6 @@
 .results-field{
   display: grid;
   grid-gap: 30px;
-}
-
-.results-field>div{
-  width:50px;
-  height:50px;
-  line-height: 50px;
-  text-align: center;
 }
 
 .results-field--horizontal{
