--- a/src/App.css
+++ b/src/App.css
@@ -40,15 +40,15 @@
 
 .grid{
   display: grid;
-  grid-template-rows: repeat(3,[tiles-start] 50px [tile-gap-start] 30px) [tiles-start] 50px [result-gap-start] 5px [results-start] 25px [tile-gap-start] 30px [pieces-start] 50px;
-  grid-template-columns: [controls-start] 50px 30px repeat(3,[tiles-start] 50px [tile-gap-start] 30px) [tiles-start] 50px [result-gap-start] 5px [results-start] 25px;
+  grid-template-rows: repeat(3,[tiles-start] 50px [tiles-end] 30px) [tiles-start] 50px [tiles-end] 5px [results-start] 25px [results-end] 30px [pieces-start] 50px [pieces-end];
+  grid-template-columns: [controls-start] 50px [controls-end] 30px repeat(3,[tiles-start] 50px [tiles-end] 30px) [tiles-start] 50px [tiles-end] 5px [results-start] 25px [results-end];
   padding: 0px 25px;
 }
 
 .piece-grid{
   grid-row: pieces-start;
   grid-column-start: tiles-start 1;
-  grid-column-end: span 7;
+  grid-column-end: tiles-end -1;
   border: 5px solid #007CC7;
   width: calc(100% + 30px);
   height: calc(100% + 30px);
